<resources>
    <string name="app_name">Shop</string>
    <string name="title">仿网易严选</string>
    <string name="main_page">首页</string>
    <string name="topic">专题</string>
    <string name="sort">分类</string>
    <string name="cart">购物车</string>
    <string name="me">我的</string>
    <string name="yuan">元起</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_psw">请输入密码</string>
    <string name="login">登录</string>
    <string name="name_or_psw_not_null">用户名或者密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="no_login">未登录</string>
    <string name="rmb">¥</string>
    <string name="line">---</string>
    <string name="my_order">我的订单</string>
    <string name="coupon">优惠券</string>
    <string name="gift_card">礼品卡</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_trace">我的足迹</string>
    <string name="welfare">会员福利</string>
    <string name="address_manager">地址管理</string>
    <string name="account_safe">账号安全</string>
    <string name="call_customer_service">联系客服</string>
    <string name="help_centre">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="css_goods">
        html,body,p{
            padding:0px;
            margin:0px;
            text-align:center;
        }
        img{
            width:100%;
            top:0;
            bottom:0;
            left:0;
            right:0;
            margin:auto;
        }
    </string>
    <string name="buy">立即购买</string>
    <string name="add_cart">加入购物车</string>
    <string name="add_cart_success">添加成功</string>
    <string name="choose_all">全选</string>
    <string name="edit">编辑</string>
    <string name="order">下单</string>
    <string name="x">x</string>
    <string name="complete">完成</string>
    <string name="delete_choose">删除所选</string>
    <string name="choosed"><![CDATA[已选择 >]]></string>
    <string name="default_address">默认</string>
    <string name="choose_coupon">请选择优惠券</string>
    <string name="goods_total">商品合计</string>
    <string name="fare">运费</string>
    <string name="go_pay">去付款</string>
    <string name="search">搜索</string>
    <string name="multiple">综合</string>
    <string name="price">价格</string>
    <string name="input_content">请输入搜索内容</string>
    <string name="cancel">取消</string>
    <string name="history_record">历史记录</string>
</resources>
