<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <EditText
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:layout_marginLeft="@dimen/dp_20"
        android:id="@+id/et_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_cancel"
        android:hint="@string/input_content"
        android:layout_width="@dimen/dp_0"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        android:padding="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        android:id="@+id/cl_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:textSize="@dimen/sp_16"
            android:id="@+id/tv_multiple"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/multiple"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textSize="@dimen/sp_16"
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/price"
            app:layout_constraintLeft_toRightOf="@id/tv_multiple"
            app:layout_constraintRight_toLeftOf="@id/tv_sort"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textSize="@dimen/sp_16"
            android:id="@+id/tv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            app:layout_constraintLeft_toRightOf="@id/tv_price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/et_search"
        android:id="@+id/cl_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_20"
            android:id="@+id/tv_history"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/history_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:padding="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_20"
            android:id="@+id/iv_delete"
            android:src="@mipmap/ic_clear"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_35"/>

        <com.xts.shop.common.FlowLayout
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/tv_history"
            android:id="@+id/fl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>