<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/shape_default_address"
            android:id="@+id/tv_address_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/default_address"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:text="15818549324"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toRightOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/shape_default_address"
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:text="北京市延庆区北科院"
            android:textSize="@dimen/sp_15"
            app:layout_constraintLeft_toRightOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:text=">"
            android:layout_marginRight="@dimen/dp_20"
            android:id="@+id/tv_arrow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_coupon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_choose_coupon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/choose_coupon"
            android:layout_margin="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
            android:text=">"
            android:layout_marginRight="@dimen/dp_20"
            android:id="@+id/tv_arrow2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginRight="@dimen/dp_20"
            android:text="19张"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tv_coupon_count"
            app:layout_constraintRight_toLeftOf="@id/tv_arrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_goods_total"
        android:text="@string/goods_total"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_goods_total_price"
        android:text="@string/rmb"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/space1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_goods_total"
        android:background="@color/c_eaeaea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"/>

    <TextView
        android:id="@+id/tv_fare"
        android:text="@string/fare"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_fare_price"
        android:text="@string/rmb"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/space2"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fare"
        android:background="@color/c_eaeaea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"/>



    <TextView
        android:id="@+id/tv_coupon"
        android:text="@string/coupon"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_coupon_price"
        android:text="- ¥ 0"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/space3"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_coupon"
        android:background="@color/c_eaeaea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"/>

</androidx.constraintlayout.widget.ConstraintLayout>